--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,11 @@ body {
 
 .landing-grid {
   text-align: center;
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .avatar-img {
