cards' layout corrected, grid added

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@ body {
   background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.projects-grid {
+  display: flex;
+}
+
 .landing-grid {
   text-align: center;
   position: fixed;
