--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,24 @@ body {
   font-size: 5em;
   padding: 8px;
 }
+
+.contact-body {
+  margin: auro;
+  background: gray;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+
+.contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background: #fff;
+  color: black;
+  border: 2px solid red;
+  margin-bottom: 20px;
+}
