--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,18 @@ body {
   border: 2px solid red;
   margin-bottom: 20px;
 }
+
+.contact-grid h2 {
+  font-family: 'Anton', 'sans-serif';
+}
+
+.contact-grid p {
+  font-family: 'Oxygen', 'sans-serif';
+  font-weight: bold;
+}
+
+.contact-grid hr {
+  border-top: 5px dotted black;
+  margin: auto;
+  width: 50%;
+}
