--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,7 @@ body {
 }
 
 .contact-body {
-  margin: auro;
-  background: gray;
+  margin: auto;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -84,7 +83,6 @@ body {
   height: 550px;
   background: #fff;
   color: black;
-  border: 2px solid red;
   margin-bottom: 20px;
 }
 
@@ -101,4 +99,15 @@ body {
   border-top: 5px dotted black;
   margin: auto;
   width: 50%;
+}
+
+.contact-list i {
+  font-size: 66px;
+  padding-right: 5rem;
+}
+
+.resume-right-col {
+  background: #27221f;
+  color: #fff;
+  padding: 2em;
 }
