footer and new cleaner navbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,17 @@ body {
 
 /*----------------    NAVBAR    ----------------*/
 
+.bg-nav {
+  background: #0F2027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .nav-translusent {
   overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  border-bottom: 2px solid #302b63;
 }
 
 /*---------------- LANDING PAGE ----------------*/
